python-prober-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: ish-pythonprober
  labels:
    helm.sh/chart: pythonprober-0.1.0
    app.kubernetes.io/name: pythonprober
    app.kubernetes.io/instance: ish
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 7000
      protocol: TCP
      name: http-metrics
  selector:
    app.kubernetes.io/name: pythonprober
    app.kubernetes.io/instance: ish
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ish-pythonprober
  labels:
    helm.sh/chart: pythonprober-0.1.0
    app.kubernetes.io/name: pythonprober
    app.kubernetes.io/instance: ish
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: pythonprober
      app.kubernetes.io/instance: ish
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pythonprober
        app.kubernetes.io/instance: ish
    spec:
      serviceAccountName: ish-pythonprober
      securityContext:
        {}
      containers:
        - name: pythonprober
          securityContext:
            {}
          image: "pythonprober:latest"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http-metrics
              containerPort: 7000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: 7000
          readinessProbe:
            httpGet:
              path: /
              port: 7000
          resources:
            {}
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ish-pythonprober
  labels:
    helm.sh/chart: pythonprober-0.1.0
    app.kubernetes.io/name: pythonprober
    app.kubernetes.io/instance: ish
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    kubernetes.io/ingress.class: nginx-internal
spec:
  rules:
    - host: "prober.vcap.me"
      http:
        paths:
          - path: /
            backend:
              serviceName: ish-pythonprober
              servicePort: 80
---
apiVersion: v1
kind: Pod
metadata:
  name: "ish-pythonprober-test-connection"
  labels:
    helm.sh/chart: pythonprober-0.1.0
    app.kubernetes.io/name: pythonprober
    app.kubernetes.io/instance: ish
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    "helm.sh/hook": test
spec:
  containers:
    - name: wget
      image: busybox
      command: ['wget']
      args: ['ish-pythonprober:80']
  restartPolicy: Never
